@@ -1,6 +1,7 @@
 v1.0.7
-- Hotfix for future Krypton support
+- Krypton support
 - More accurately display build progress
+- Additional properties available via window properties in management dialog
 
 v1.0.6
 - Option not to share menus between skins; never hide PVR shortcuts
